--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,34 @@
-h1{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+#root {
+  width: auto;
+  padding: auto;
+}
+
+#container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: baseline;
+  align-content: stretch;
+  gap: 10px;
+  padding: 50px;
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+li {
+  flex-basis: calc(20% - 20px);
+  align-self: baseline;
+  list-style-type: none;
+  width: 100px;
+  height: 480px;
+  margin-bottom: 20px;
+}
+
+li img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
