--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 #root {
-  width: auto;
-  padding: auto;
+  width: 100%;
+  padding: 0;
 }
 
 #container {
@@ -11,24 +11,66 @@
   align-content: stretch;
   gap: 10px;
   padding: 50px;
+  
 }
 
 h1 {
   font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
+  text-align: left;
+  color: aliceblue;
+  font-size: 90px;
+  margin: 10px;
+  
 }
 
 li {
   flex-basis: calc(20% - 20px);
-  align-self: baseline;
   list-style-type: none;
   width: 100px;
   height: 480px;
   margin-bottom: 20px;
+  flex-flow: row wrap;
+  /*align-content: space-around;
+  align-self: baseline; 
+  */
 }
 
 li img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
+}
+
+body {
+  background-image: url("images/background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  background-image: url("images/header3.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 50px;
+  height: 500px;
+  
+}
+
+/*header img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+}*/
+
+footer {
+  background-color: navy;
+  color: aquamarine;
+  text-align: right;
+  padding: 10px;
+}
+
+@media screen {
+  
 }
