--- a/src/style.css
+++ b/src/style.css
@@ -24,22 +24,31 @@ h1 {
 }
 
 li {
-  flex-basis: calc(20% - 20px);
+  flex-basis: calc(20% - 10px);
   list-style-type: none;
-  width: 100px;
-  height: 480px;
+  /*width: 100px;
+  height: 480px;*/
   margin-bottom: 20px;
   flex-flow: row wrap;
   /*align-content: space-around;
   align-self: baseline; 
   */
+  outline: solid;
 }
 
 li img {
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 95%;
   object-fit: contain;
 }
+
+h3 {
+  color: aliceblue;
+  background-color: rgba(0, 0, 128, 0.671);
+  margin: 0;
+  text-align: center;
+}
+
 
 body {
   background-image: url("images/background.png");
@@ -57,12 +66,6 @@ header {
   height: 500px;
   
 }
-
-/*header img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}*/
 
 footer {
   background-color: navy;
