--- a/src/style.css
+++ b/src/style.css
@@ -34,19 +34,22 @@ li {
   align-self: baseline; 
   */
   outline: solid;
+  background-color: rgba(2, 2, 94, 0.815);
 }
 
 li img {
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
+  
 }
 
 h3 {
   color: aliceblue;
-  background-color: rgba(0, 0, 128, 0.671);
+  background-color: rgba(2, 2, 94, 0.815);
   margin: 0;
   text-align: center;
+  background-size: cover;
 }
 
 
