--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,6 @@ li img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  
 }
 
 h3 {
@@ -49,9 +48,8 @@ h3 {
   background-color: rgba(2, 2, 94, 0.815);
   margin: 0;
   text-align: center;
-  background-size: cover;
+  background-size: contain;
 }
-
 
 body {
   background-image: url("images/background.png");
@@ -69,6 +67,7 @@ header {
   height: 500px;
   
 }
+
 
 footer {
   background-color: navy;
