--- a/src/style.css
+++ b/src/style.css
@@ -34,17 +34,17 @@ li {
   align-self: baseline; 
   */
   outline: solid;
+  background-color: rgb(0, 0, 128);
 }
 
 li img {
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
 }
 
 h3 {
   color: aliceblue;
-  background-color: rgba(0, 0, 128, 0.671);
   margin: 0;
   text-align: center;
 }
@@ -65,7 +65,6 @@ header {
   height: 500px;
   
 }
-
 
 footer {
   background-color: navy;
