--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@ h3 {
   color: aliceblue;
   margin: 0;
   text-align: center;
+  font-size: 100%;
 }
 
 body {
@@ -63,7 +64,6 @@ header {
   background-repeat: no-repeat;
   padding: 50px;
   height: 500px;
-  
 }
 
 footer {
