--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,8 @@ li {
   */
   outline: solid;
   background-color: rgb(0, 0, 128);
+  
+  
 }
 
 li img {
@@ -46,8 +48,10 @@ li img {
 h3 {
   color: aliceblue;
   margin: 5%;
+  padding: 5%;
   text-align: center;
-  font-size: 1em;
+  display:contents;
+  
 }
 
 body {
@@ -73,24 +77,4 @@ footer {
   padding: 10px;
 }
 
-  /* Media query para móviles) */
-@media screen and (max-width: 768px) {
-  h3 {
-    font-size: 1.2em; /* Tamaño de fuente más pequeño para pantallas pequeñas */
-  }
-}
-
-/* Media query para tabletas) */
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  h3 {
-    font-size: 1.4em; /* Tamaño de fuente mediano para pantallas medianas */
-  }
-}
-
-/* Media query para computadoras de escritorio) */
-@media screen and (min-width: 1025px) {
-  h3 {
-    font-size: 1.8em; /* Tamaño de fuente más grande para pantallas grandes */
-  }
-}
-
+ 
