--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,100 @@
-h1{
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+#root {
+  width: 100%;
+  padding: 0;
 }
+
+#container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: baseline;
+  align-content: stretch;
+  gap: 10px;
+  padding: 50px;
+  
+}
+
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+  color: aliceblue;
+  font-size: 90px;
+  margin: 10px;
+  
+}
+
+li {
+  flex-basis: calc(20% - 10px);
+  list-style-type: none;
+  /*width: 100px;
+  height: 480px;*/
+  margin-bottom: 20px;
+  flex-flow: row wrap;
+  /*align-content: space-around;
+  align-self: baseline; 
+  */
+  outline: solid;
+  background-color: rgb(0, 0, 128);
+  
+  
+}
+
+li img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+h3 {
+  color: aliceblue;
+  margin: 5%;
+  padding: 5%;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+body {
+  background-image: url("images/background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  background-image: url("images/header3.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 50px;
+  height: 500px;
+}
+
+footer {
+  background-color: navy;
+  color: aquamarine;
+  text-align: right;
+  padding: 10px;
+  
+}
+
+  /* Media query para móviles) */
+@media screen and (max-width: 768px) {
+  h3 {
+    font-size: 1rem; /* Tamaño de fuente más pequeño para pantallas pequeñas */
+  }
+}
+
+/* Media query para tabletas) */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  h3 {
+    font-size: 1.4rem; /* Tamaño de fuente mediano para pantallas medianas */
+  }
+}
+
+/* Media query para computadoras de escritorio) */
+@media screen and (min-width: 1025px) {
+  h3 {
+    font-size: 1.8rem; /* Tamaño de fuente más grande para pantallas grandes */
+  }
+}
+
