--- a/src/style.css
+++ b/src/style.css
@@ -48,17 +48,17 @@ h1 {
 
 .card img{
   width: 100%;
-  height: 70%;
+  height: 100%;
   object-fit: contain;
 }
-h3{
+/*h3{
   position: relative;
   top: -12%;
   height: 130px;
   border-top: 20px;
   outline: solid;
 background-color: rgb(0, 0, 128);
-}
+}*/
 /* para empezar a dar movimiento a las tarjetas */
 
 /*h3 {
