--- a/src/style.css
+++ b/src/style.css
@@ -23,51 +23,60 @@ h1 {
   flex-basis: calc(20% - 20px);
   list-style-type: none;
   position: relative;
-  /*width: 20rem;*/
   height: 30rem;
   display: flex;
   justify-content: space-around;
   text-align: center;
+  /*width: 20rem;*/
   /*flex-flow: row wrap;
   align-content: space-around;
   align-self: baseline; 
   */
 }
-.front, .back {
+.front {
   width: 100%;
   height: 80%;
   object-fit: contain;
   position: absolute;
   margin-top: 0;
   padding: 5%;
-  text-align: center;
-  color: aliceblue;
-  font-size: .2em;
   display: block;
+}
+
+.back{
+  color: aliceblue;
+  padding: 5%;
+}
+
+.back p {
+  font-size: 0.5em;
+  text-align: justify;
+}
+
+.overlay {
+  position: absolute;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(56, 59, 226, 0.521); /* Fondo semitransparente para el texto */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0; /* Inicialmente oculto */
+  transition: opacity 0.3s; /* Transición suave para mostrar/ocultar */
+}
+
+.card:hover .overlay {
+  opacity: 1; /* Mostrar el texto cuando se pasa el ratón por encima */
 }
 
 .card img{
   width: 100%;
   height: 100%;
   object-fit: contain;
-}
-/*h3{
-  position: relative;
-  top: -12%;
-  height: 130px;
-  border-top: 20px;
-  outline: solid;
-background-color: rgb(0, 0, 128);
-}*/
-/* para empezar a dar movimiento a las tarjetas */
-
-/*h3 {
-  color: aliceblue;
-  margin: 5%;
-  padding: 5%;
-  text-align: center;
-  font-size: 1.5em;
-
 }
 
 body {
@@ -113,5 +122,3 @@ footer {
     font-size: 2rem; /* Tamaño de fuente más grande para pantallas grandes */
   }
 }
-
-
