--- a/src/style.css
+++ b/src/style.css
@@ -19,21 +19,22 @@ h1 {
   margin: 10px;
 }
 
-.card{
-  flex-basis: calc(20% - 20px);
+.card {
+  flex-basis: calc(25% - 100px);
   list-style-type: none;
   position: relative;
   /*width: 20rem;*/
-  height: 30rem;
+  height: 35rem;
   display: flex;
   justify-content: space-around;
   text-align: center;
   /*flex-flow: row wrap;
   align-content: space-around;
   align-self: baseline; 
-  */
+  background-color: rgb(0, 0, 128);*/
 }
-.front, .back {
+.front,
+.back {
   width: 100%;
   height: 80%;
   object-fit: contain;
@@ -42,42 +43,51 @@ h1 {
   padding: 5%;
   text-align: center;
   color: aliceblue;
-  font-size: .2em;
+  font-size: 0.2em;
   display: block;
+  /*transform: translate(-50%, -50%);
+  background-color: rgb(128, 0, 0);*/
 }
-.card img{
+.back{
+  visibility: hidden;
+}
+.primer, .segunda {
   width: 100%;
-  height: 70%;
+  height: 100%;
   object-fit: contain;
 }
-h3{
+h3 {
   position: relative;
   top: -12%;
   height: 130px;
   border-top: 20px;
   outline: solid;
-background-color: rgb(0, 0, 128);
+  background-color: rgb(0, 0, 128);
 }
-.imgSmall{
-  position: absolute;
-  height: 59%;
-  width: 70%;
-  margin-top: -112%;
-  left: 15%;
-}
-.title{
-  position: absolute;
-  margin-top: 8%;
-  left: 16%;
+/*+++++++++++++++++++++++++++ estilos segundas tarejtas ++++++++++++++++++++ */
+.title {
+  position: relative;
+  margin-top: -27rem;
+  left: auto;
   font-size: medium;
 }
-.description{
-  position: absolute;
-  margin-top: -36%;
-  font-size: x-small;
-  height: 130px;
-  /*background-color: rgb(41, 128, 0);*/
+
+.imgSmall {
+  position: relative;
+  height: 14.6rem;
+  width: 14.8rem;
+  margin-top: 2.5rem;
 }
+
+.description{
+  position: relative;
+  margin-top: .6rem;
+  left: 3rem;
+  font-size: small;
+  height: 5rem;
+  text-align: left;
+}
+
 body {
   background-image: url("images/background.png");
   background-size: cover;
@@ -99,28 +109,28 @@ footer {
   color: aquamarine;
   text-align: right;
   padding: 10px;
-  
 }
 
-  /* Media query para móviles) */
+/* Media query para móviles) */
 @media screen and (max-width: 768px) {
-  .front, .back {
+  .front,
+  .back {
     font-size: 0.2rem; /* Tamaño de fuente más pequeño para pantallas pequeñas */
   }
 }
 
 /* Media query para tabletas) */
 @media screen and (min-width: 769px) and (max-width: 1024px) {
-  .front, .back {
+  .front,
+  .back {
     font-size: 1rem; /* Tamaño de fuente mediano para pantallas medianas */
   }
 }
 
 /* Media query para computadoras de escritorio) */
 @media screen and (min-width: 1025px) {
-  .front, .back {
+  .front,
+  .back {
     font-size: 2rem; /* Tamaño de fuente más grande para pantallas grandes */
   }
 }
-
-
