--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ footer {
   width: 100%;
   padding: 0;
 }
-#container {
+#container, #containerP {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -55,7 +55,9 @@ footer {
   height: 40vh;
   justify-content: space-around;
   text-align: center;
-  background-color: rgb(0, 0, 128);
+  cursor: pointer;
+  overflow: hidden;
+  /*background-color: rgb(0, 0, 128);*/
 }
 .front,
 .overlay {
@@ -87,7 +89,7 @@ img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /*opacity: 0;  Inicialmente oculto */
+  opacity: 0;  /*Inicialmente oculto */
   transition: opacity 0.3s; /* Transición suave para mostrar/ocultar */
 }
 
@@ -100,6 +102,17 @@ img {
 }
 .back h2{
   font-size: 2vw;
+}
+
+.card:hover .image{
+  opacity: 0;
+}
+
+.card:hover .overlay{
+  opacity: 1;
+}
+.info{
+  text-decoration: underline;
 }
 /*+++++++++++++++++++++++++++ estilos segundas tarejtas ++++++++++++++++++++ */
 .name {
