--- a/src/style.css
+++ b/src/style.css
@@ -83,12 +83,7 @@ img {
 }
 /*++++++++++++++++++++ overlay +++++++++++++++ */
 .overlay {
-  background: rgba(
-    7,
-    10,
-    173,
-    0.521
-  ); /* Fondo semitransparente para el texto */
+  background: rgba(7, 10, 173, 0.521); /* Fondo semitransparente para el texto */
   display: flex;
   flex-direction: column;
   justify-content: center;
