--- a/src/style.css
+++ b/src/style.css
@@ -39,42 +39,25 @@ footer {
 }
 #container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: baseline;
-  align-content: stretch;
-  gap: 20px;
-  padding: 50px;
+  flex-flow: row wrap;
+  padding: 20px;
+  justify-content: center;
 }
 /*++++++++++++++++++++ tarejtas +++++++++++++++ */
 .card {
-  /*flex-basis: calc(20% - 20px);*/
   list-style-type: none;
   position: relative;
-  width: 15vw;
+  padding: 0;
   height: 40vh;
-  justify-content: space-around;
   text-align: center;
-  cursor: pointer;
-  overflow: hidden;
-  /*background-color: rgb(0, 0, 128);*/
+  margin: 20px;
 }
 .front,
 .overlay {
   width: 100%;
   height: 100%;
-  object-fit: contain;
-  position: absolute;
-  text-align: center;
-  color: aliceblue;
   font-size: 0.2em;
-  display: block;
-  /*transform: translate(-50%, -50%);
-  background-color: rgb(128, 0, 0);*/
 }
-/*.back{
-  background-color: rgb(128, 0, 0);
-}*/
 /*++++++++++++++++++++ imagenes principales de las tarejtas +++++++++++++++ */
 img {
   width: 100%;
@@ -83,35 +66,28 @@ img {
 }
 /*++++++++++++++++++++ overlay +++++++++++++++ */
 .overlay {
-  background: rgba(
-    7,
-    10,
-    173,
-    0.521
-  ); /* Fondo semitransparente para el texto */
-  display: flex;
-  flex-direction: column;
+  position: absolute;
+  background: rgba(7,10,173,0.521); /* Fondo semitransparente para el texto */
   justify-content: center;
   align-items: center;
   opacity: 0; /*Inicialmente oculto */
   transition: opacity 0.3s; /* Transición suave para mostrar/ocultar */
+  color: aliceblue;
+  top: 0%;
 }
 
 .back p {
   font-family: "std";
-  font-size: 1.2vw;
+  font-size: 20px;
   text-align: left;
-  padding: 5%;
-  margin-top: -14px;
-  margin-bottom: -14px;
 }
 .back h2 {
-  font-size: 2vw;
+  font-size: 40px;
   font-family: "std";
 }
 
 .card:hover .image {
-  opacity: 0;
+  opacity: 20%;
 }
 
 .card:hover .overlay {
