--- a/src/estilos.css
+++ b/src/estilos.css
@@ -1,21 +1,28 @@
 body {
   background-image: url("images/background.jpg");
-  background-size: auto;
+  background-size: cover;
   background-repeat: no-repeat;
   padding: 0;
   margin: 0;
 }
 header {
-  background-image: url("images/header3.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 200px;
+  height: 10%;
   width: 100%;
   font-family:"std";
   color: aliceblue;
-  text-align: left;
   padding: .1%;
+  background-color: blue;
+}
+.titulo{
   font-size: 2.5vw;
+}
+ .return{
+  width: 10%;
+  font-size: 1vw;
+  margin-left: 80%;
+}
+a:visited {
+  color: rgb(255, 255, 255);
 }
 
 footer {
@@ -25,16 +32,37 @@ footer {
   height: 4vh;
   width: 100%;
 }
+/*-----------------------------DESCEPCION------------------------------------------*/
+.movieDescription{ 
+  height: 80%;
+  width: 100%;
+  object-fit: contain;
+  display: flex;
+  flex-flow: row wrap;
+}
+#poster{
+  width: 15%;
+  padding: 1%;
+  object-fit: contain;
+}
+#infoMovie{
+  /* position: absolute;*/
+  margin: 20px;
+  font-size: 2.5vh;
+  width: 73%;
+  object-fit: contain;
+  color: rgb(24, 0, 240);
+  background-color: rgba(0, 255, 255, 0.301);
+  padding: 2%;
+  text-align: justify; 
+}
 
 /*-----------------------------contenedores------------------------------------------*/
-
 #container2 {
   display: flex;
   flex-flow: row wrap;
-  padding: 20px;
   justify-content: center;
 }
-
 .card2 {
   list-style-type: none;
   position: relative;
@@ -56,4 +84,18 @@ img {
   object-fit: contain;
   top: 18.2%;
   left: 15%;
+}
+
+.peopleName{
+  z-index: 2;
+  position:absolute;
+  color: aliceblue;
+  font-size: 2vh;
+  margin: -12% 10%;
+}
+table{
+  z-index: 2;
+  position:absolute;
+  margin: -20% 10%;
+  color: aliceblue;
 }
