--- a/src/estilos.css
+++ b/src/estilos.css
@@ -31,9 +31,10 @@ footer {
   background-color: navy;
   color: aquamarine;
   text-align: right;
-  height: 3vh;
-  width: 100%;
+  height: 2vh;
+  padding: 10px;
 }
+
 /*-----------------------------DESCEPCION------------------------------------------*/
 .movieDescription{ 
   height: 80%;
